--- a/LASDictionaryV2/Base.lproj/Main.storyboard
+++ b/LASDictionaryV2/Base.lproj/Main.storyboard
@@ -39,6 +39,14 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="B7j-61-Ohh">
+                                <rect key="frame" x="112" y="96" width="121" height="28"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <segments>
+                                    <segment title="First"/>
+                                    <segment title="Second"/>
+                                </segments>
+                            </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -155,7 +163,7 @@
             </objects>
             <point key="canvasLocation" x="1721" y="-1129"/>
         </scene>
-        <!--Dictionary Table View Controller-->
+        <!--Dictionary-->
         <scene sceneID="QN2-Pf-a94">
             <objects>
                 <tableViewController id="A1v-YL-po7" customClass="DictionaryTableViewController" customModule="LASDictionaryV2" customModuleProvider="target" sceneMemberID="viewController">
@@ -190,11 +198,30 @@
                             <outlet property="delegate" destination="A1v-YL-po7" id="C9n-ij-AKt"/>
                         </connections>
                     </tableView>
-                    <tabBarItem key="tabBarItem" systemItem="bookmarks" id="axx-pj-EJc"/>
+                    <tabBarItem key="tabBarItem" title="Dictionary" image="public.png" id="axx-pj-EJc"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TJP-d6-MzR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="556" y="-1788"/>
+        </scene>
+        <!--Quiz-->
+        <scene sceneID="48x-Ph-Lgo">
+            <objects>
+                <viewController id="ZBg-HQ-Yoo" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="0h0-cs-pNs"/>
+                        <viewControllerLayoutGuide type="bottom" id="f8d-yZ-FIT"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ks2-ll-R4o">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Quiz" id="1s3-ei-CtJ"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Pwx-xx-quN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1458" y="-2426"/>
         </scene>
         <!--Favorites Table View Controller-->
         <scene sceneID="GJc-8b-MUM">
@@ -321,10 +348,10 @@
             </objects>
             <point key="canvasLocation" x="78" y="-385"/>
         </scene>
-        <!--Tab Bar Controller-->
+        <!--Quiz-->
         <scene sceneID="j8L-WV-IFC">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Hln-Rm-axQ" sceneMemberID="viewController">
+                <tabBarController title="Quiz" automaticallyAdjustsScrollViewInsets="NO" id="Hln-Rm-axQ" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="w9Y-e2-tLh"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ZhR-jA-o7O">
@@ -336,6 +363,7 @@
                         <segue destination="H0e-sS-q81" kind="relationship" relationship="viewControllers" id="hba-l6-PWc"/>
                         <segue destination="ygl-J1-r33" kind="relationship" relationship="viewControllers" id="SLJ-0r-pMD"/>
                         <segue destination="A1v-YL-po7" kind="relationship" relationship="viewControllers" id="teF-nb-kWv"/>
+                        <segue destination="ZBg-HQ-Yoo" kind="relationship" relationship="viewControllers" id="cSM-d6-ju8"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4R5-Qf-wJm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -343,4 +371,7 @@
             <point key="canvasLocation" x="263" y="-1110"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="public.png" width="24" height="24"/>
+    </resources>
 </document>
